@@ -1,0 +1,60 @@
+------------------------------------------------------------------------------
+--                                                                          --
+--                           GARLIC COMPONENTS                              --
+--                                                                          --
+--                S Y S T E M . G A R L I C . O S _ L I B                   --
+--                                                                          --
+--                                B o d y                                   --
+--                                                                          --
+--                           $Revision$                              --
+--                                                                          --
+--           Copyright (C) 1996 Free Software Foundation, Inc.              --
+--                                                                          --
+-- GARLIC is free software;  you can redistribute it and/or modify it under --
+-- terms of the  GNU General Public License  as published by the Free Soft- --
+-- ware Foundation;  either version 2,  or (at your option)  any later ver- --
+-- sion.  GARLIC is distributed  in the hope that  it will be  useful,  but --
+-- WITHOUT ANY WARRANTY;  without even the implied warranty of MERCHANTABI- --
+-- LITY or  FITNESS FOR A PARTICULAR PURPOSE.  See the  GNU General Public  --
+-- License  for more details.  You should have received  a copy of the GNU  --
+-- General Public License  distributed with GARLIC;  see file COPYING.  If  --
+-- not, write to the Free Software Foundation, 59 Temple Place - Suite 330, --
+-- Boston, MA 02111-1307, USA.                                              --
+--                                                                          --
+-- As a special exception,  if other files  instantiate  generics from this --
+-- unit, or you link  this unit with other files  to produce an executable, --
+-- this  unit  does not  by itself cause  the resulting  executable  to  be --
+-- covered  by the  GNU  General  Public  License.  This exception does not --
+-- however invalidate  any other reasons why  the executable file  might be --
+-- covered by the  GNU Public License.                                      --
+--                                                                          --
+--               GARLIC is maintained by ACT Europe.                        --
+--            (email:distribution@act-europe.gnat.com).                     --
+--                                                                          --
+------------------------------------------------------------------------------
+
+with Interfaces.C.Strings;
+with System.Garlic.Thin;
+
+package body System.Garlic.OS_Lib is
+
+   ------------
+   -- Getenv --
+   ------------
+
+   function Getenv (Name : String)
+      return String
+   is
+      use Interfaces.C.Strings;
+      C_Name   :          chars_ptr := New_String (Name);
+      C_Result : constant chars_ptr := Thin.C_Getenv (C_Name);
+   begin
+      Free (C_Name);
+      if C_Result = Null_Ptr then
+         return "";
+      else
+         return Value (C_Result);
+      end if;
+   end Getenv;
+
+end System.Garlic.OS_Lib;
